welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
  var colors = new Array[Color](getWorldHeight());
  
  for (i <- 0 to getWorldHeight() - 2) {
    colors(i) = getGroundColor();
    forward()
  }
  
  colors(getWorldHeight()-1) = getGroundColor();
  backward(getWorldHeight()-1);
  
  for (i <- 1 to getWorldHeight() -1) {
    left();forward();right();
    paintLine(colors)
  }
  
}

def paintLine(colors:Array[Color]) {
  var offset = readMessage().toInt;
  
  
  for (j <- 0 to getWorldHeight()-2) {
    mark(colors((j+offset) % getWorldHeight()));
    forward();
  }
  
  mark(colors(-offset)%getWorldHeight());
  backward(getWorldHeight()-1);
        
}


def mark(c:Color) {
  setBrushColor(c);
  brushDown();
  brushUp();
}